Initial updates to Spring Boot and other dependencies.
* Move build from Maven to Gradle (sorry Maven)
* Still cleanup to be done
* Add editorconfig